DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Apr-11-2004 patrickh    The Input and Cluster Managers now append a default
                        search path for driver and plug-in DSOs respectively.
                        Updated to VPR 0.35.2.
                        NEW VERSION: 0.14.4
Apr-05-2004 patrickh    Updated to JCCL 0.17.0.
Apr-01-2004 patrickh    Fixed MotionStar crashing bugs on Windows and array
            aronb       initialization problems in gadget::EventWindow on all
                        platforms.
                        NEW VERSION: 0.14.3
Mar-02-2004 aronb       ClusterPlugins are now dynamically loaded in a manner 
                        more like device drivers.
Feb-05-2004 patrickh    gadget::DigitalProxy::getData() now returns a
                        gadget::Digital::State.
                        NEW VERSION: 0.14.2
Nov-11-2003 allenb      Complete rewrite of flock standalone driver.
                        The new driver is much more stable and has many new
                        abilities. (including auto detection of the setup)
Nov-06-2003 allenb      Fixed bug with SampleBuffer that could allow memory
                        exhaustion errors if devices are not swapped
                        for several minutes.
                        NEW VERSION: 0.14.1
Oct-27-2003 allenb      Fixed bug with FOB on Linux. RTS was always high.
Oct-12-2003 allenb      Added driver for Linux joystick devices.
Oct-12-2003 allenb      Refactored Input interface methods startSampling,
                        stopSampling, and sample to return bools.
                        NEW VERSION: 0.14.0
Sep-18-2003 patrickh    Updated to VPR 0.28.
                        NEW VERSION: 0.13.2
Aug-16-2003 patrickh    Updated to Tweek 0.15.
                        NEW VERSION: 0.13.1
Jul-10-2003 nonchocoboy Updated to JCCL 0.12.0 API for both Java and C++.